# slido-quiz-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  brain.py  commands.md  hatch.toml  hello.py  pyproject.toml  quizz_questions.py  ruff.toml  sample.html  sample2.html
.github/workflows/: ci.yml  demo.yml  docker-publish.yml  docker.yml
src/slido_quiz_bot/: __init__.py  __main__.py  answer_quiz_question.py  brain.py  parser.py  quizz_question.py  slido_bot.py
tests/: __init__.py  conftest.py  test_answer_quiz_question.py  test_quiz_question.py
