[tool.poetry]
name = "slido-quiz-bot"
version = "0.1.0"
description = "A bot that automatically completes Slido quizzes by generating answers to all questions using Gemini AI."
authors = ["Joan Palacios Caballero"]
readme = "README.md"
packages = [{include = "slido_quiz_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
google-generativeai = "^0.8.3"
playwright = "^1.48.0"
rich = "^13.9.4"

[tool.poetry.group.code_quality.dependencies]
ruff = "^0.7.4"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slido-quiz-bot = "slido_quiz_bot.__main__:main"
